exports[`AmazonMwsRequest set(...) #query with complex list should return expected 1`] = `
Object {
  "mom.1.abc": "123",
}
`;

exports[`AmazonMwsRequest set(...) #query with list should return expected 1`] = `
Object {
  "ropName1.1": "abc123",
  "ropName1.2": "def456",
}
`;

exports[`AmazonMwsRequest set(...) #query with required flag and value is null should throw 1`] = `Object {}`;

exports[`AmazonMwsRequest set(...) #query with required flag and value is undefined should throw 1`] = `Object {}`;

exports[`AmazonMwsRequest set(...) #query without extra properties should return expected 1`] = `
Object {
  "ropName1": "abc123",
}
`;
